--- a/FoodOrderingApp-db/src/main/resources/config/localhost.properties
+++ b/FoodOrderingApp-db/src/main/resources/config/localhost.properties
@@ -1,6 +1,6 @@
-server.port=5432
-server.host=localhost
-database.name=restaurantdb
+server.port=5433                                 //Port details needs to be specified in properties file
+server.host=localhost                            //IP Address details needs to be specified in properties file
+database.name=foodiesjunction                    //Database name needs to be specified in properties file
 database.username=postgres
-database.password=password
+database.password=postgres                       //DB password needs to be specified in properties file
 
